# videoPlat

./: .env.example  .gitignore  CLAUDE.md  COMMENT_GUIDELINES.md  DEPLOYMENT_SUCCESS.md  IP地址访问问题解决方案.md  README.md  TODO.md  cleanup-rooms.bat  cleanup-rooms.sh  code-stats-使用说明.md  code-stats.skill  deploy-backend.bat  deploy-backend.md  docker-compose.yml  test-all-apis.sh  会议室手动清理功能开发完成报告.md  会议室手动清理功能说明.md  停止录制功能修复报告.md  前端功能测试报告.md  录制功能修复完成报告.md  录制功能说明文档.md  测试与修复完成报告.md  测试问题报告.md  验证清单.md
backend/: Dockerfile  Dockerfile.full  pom.xml
backend/agora_rtc_sdk/: .gitignore  PACKAGE_INFO  README.md  README.zh.md
backend/agora_rtc_sdk/example/: CMakeLists.txt  recorder.json
backend/agora_rtc_sdk/example/recorder/: CMakeLists.txt  log.h  recorderEventHandler.cpp  recorderEventHandler.h  sample_recorder.cpp
backend/agora_rtc_sdk/example/recorder/parser/: parser.cpp  parser.h
backend/agora_rtc_sdk/example/recorder_local/: CMakeLists.txt  config.h  log.h  main.cpp  opt_parser.cpp  recorderEventHandler.cpp  recorderEventHandler.h  time_util.cpp  time_util.h
backend/videoplat-admin/: README.md  pom.xml
backend/videoplat-application/: README.md  pom.xml
backend/videoplat-auth/: MIGRATION.md  pom.xml
backend/videoplat-common/: pom.xml
backend/videoplat-domain/: pom.xml
backend/videoplat-meeting/: MIGRATION.md  MIGRATION_REPORT.md  QUICK_REFERENCE.md  README.md  pom.xml
backend/videoplat-video-review/: COMPLETION_REPORT.md  MODULE_OVERVIEW.md  README.md  pom.xml
docs/: IMPLEMENTATION_STATUS.md  JAVA17_INSTALLATION.md  PROJECT_COMPLETION_REPORT.md  QUICK_START.md  README.md  TEST_REPORT.md  TEST_SUMMARY.md  文档整理完成报告.md
docs/archive/: README.md  cleanup-rooms-skill-完成.md  测试问题修复完成报告.md  测试问题修复实施指南.md  测试问题修复指南.md  测试问题汇总.md  问题修复方案.md  问题清单-快速版.md
docs/deployment/: HTTPS快速开始.md  HTTPS配置说明.md  README.md  部署完成报告.md
docs/development/: README.md  重构完成报告.md
docs/features/: Agora云端录制集成完成报告.md  Agora本地录制集成完成报告.md  README.md  WebSocket聊天功能实现文档.md  录制功能已解决.md  (+4 more)
frontend/: Dockerfile  QUICK_START.md  UI_OPTIMIZATION_REPORT.md  VISUAL_PREVIEW.md  generate-cert.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+174 files in other folders)
